# torrent

./: .gitignore  1669901338-Satisfactory.v0.6.1.5.Early.Access(1).torrent  Cargo.toml  READme.md  buffers.txt.REMOVED.git-id  constants.rs  debian-12.8.0-amd64-netinst.iso  debian.json  diagrame.drawio  downloaded.txt  first_piece.txt  frieren.torrent  heaptrack.torrent.343067.zst  humanity.txt  main.py  one_piece.torrent  op.torrent  output.json  output.txt  parsed_piece.txt  peers.txt  rar.json  rar.torrent  real.torrent  result.txt  simple.torrent  subs.json  subs.torrent  test.torrent  test.txt  yome.json  yome.torrent
src/: app.rs  bencode.rs  constants.rs  error.rs  handshake.rs  log.rs  magnet.rs  main.rs  peers.rs  torrent.rs  tracker.rs  utils.rs  writer.rs
src/bencode/: decode.rs  decoder.rs  encode.rs  encoder.rs  mod.rs
src/bencode_old/: decode.rs  mod.rs
src/client/: bitfield.rs  handshake.rs  message.rs  mod.rs
src/connection/: mod.rs
src/dht/: bucket.rs  message.rs  mod.rs  node.rs  routing_table.rs  rpc.rs  socket.rs  store.rs
src/download/: bitfield.rs  client.rs  connection.rs  download.rs  download_backup.rs  handshake.rs  message.rs  mod.rs  writer.rs
src/download_old/: handshake.rs  mod.rs
src/io/: mapping.rs  mod.rs  reader.rs  writer.rs
src/torrentfile/: bencode.rs  mod.rs  torrent.rs
src/tracker/: mod.rs  peers.rs
src/tracker_old/: mod.rs
src/ui/: app.rs  crossterm.rs  download.rs  files.rs  info.rs  mod.rs  peers.rs  progress.rs
src/ui/components/: fs.rs  (+4 more)
tests/torrents/: OP.torrent  many_files.torrent  test2.torrent
