[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sha1 = '0.10.6'
rand = '0.9.0'
chrono = '0.4.39'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["blocking"] }
bytes = "1.10.0"
# remove on production
# [profile.release]
# debug = true
