[package]
name = "torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sha1 = '0.10.6'
rand = '0.9.0'
chrono = '0.4.39'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["blocking"] }
bytes = "1.10.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6"


# remove on production
# [profile.release]
# debug = true


[dev-dependencies]
tempfile = "3.17.1"
